--- a/public/chat.html
+++ b/public/chat.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Chat App</title>
-    <link rel="icon" href="/img/favicon.png">
+    <title>TextTronix: Stay connected, always.</title>
+    <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 
@@ -46,6 +46,7 @@
         </script>
 
     <script id="sidebar-template" type="text/html">
+        <img src="/img/logo.png" alt="Logo" width="200" height="100">
         <h2 class="room-title">{{room}}</h2>
         <h3 class="list-title">Users</h3>
         <ul class="users">
