--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chat App</title>
-        <link rel="icon" href="/img/favicon.png">
+        <title>TextTronix: Stay connected, always.</title>
+        <link rel="icon" href="/img/logo.png">
         <link rel="stylesheet" href="/css/styles.min.css">
     </head>
     <body>
         <div class="centered-form">
+            
             <div class="centered-form__box">
                 <h1>Join</h1>
+                <img src="/img/logo.png" alt="Logo" width="200" height="100">
                 <form action="/chat.html">
                     <label>Display name</label>
                     <input type="text" name="username" placeholder="Display name" required>
